various warning fixes as well as formatting fixes